# my-no-sql-sdk

./: .gitignore  Cargo.toml  MY_NO_SQL_ENTITY_DESIGN_PATTERNS.md
my-no-sql-core/: Cargo.toml
my-no-sql-core/src/: expiration_index.rs  lib.rs
my-no-sql-core/src/db/db_partition/: db_partition.rs  db_rows_container.rs
my-no-sql-core/src/db/db_row/: db_row.rs
my-no-sql-core/src/db/db_table/: db_partitions_container.rs  db_table.rs  db_table_inner.rs  db_table_master_node.rs  mod.rs
my-no-sql-data-writer/: Cargo.toml
my-no-sql-data-writer/src/: ping_pool.rs
my-no-sql-data-writer/src/my_no_sql_data_writer/: execution.rs  mod.rs  my_no_sql_data_writer.rs  my_no_sql_data_writer_builder.rs
my-no-sql-sdk/: Cargo.toml
my-no-sql-sdk/src/: lib.rs
my-no-sql-server-core/: Cargo.toml
my-no-sql-server-core/src/: db_instance.rs  db_table.rs  db_table_wrapper.rs  lib.rs
my-no-sql-server-core/src/db_snapshots/: db_partition_snapshot.rs  db_rows_by_partitions_snapshot.rs  db_rows_snapshot.rs  db_table_snapshot.rs
my-no-sql-tcp-reader/: Cargo.toml
my-no-sql-tcp-reader/src/: my_no_sql_tcp_connection.rs  tcp_events.rs
my-no-sql-tcp-reader/src/subscribers/: callback_triggers.rs  my_no_sql_data_reader.rs  my_no_sql_data_reader_callbacks.rs  my_no_sql_data_reader_callbacks_pusher.rs  my_no_sql_data_reader_data.rs  my_no_sql_data_reader_mock.rs  my_no_sql_data_reader_mock_inner.rs  my_no_sql_data_reader_tcp.rs  subscribers.rs  update_event_trait.rs
my-no-sql-tcp-reader/src/subscribers/get_entities_builder/: get_entities_builder.rs  get_entities_builder_inner.rs  get_entities_builder_mock.rs
my-no-sql-tcp-reader/src/subscribers/get_entity_builder/: get_entity_builder_inner.rs  get_entity_builder_mock.rs
my-no-sql-tcp-shared/: Cargo.toml
my-no-sql-tcp-shared/src/: tcp_contracts.rs
my-no-sql-tcp-shared/src/sync_to_main/: sync_to_main_node_handler.rs  sync_to_main_node_handler_inner.rs  sync_to_main_node_queue.rs
my-no-sql-tests/src/: test_same_timestamp.rs
