[package]
name = "my-no-sql-core"
version = "0.4.1"
edition = "2021"

[features]
default = []
master-node = []
debug_db_row = []


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-no-sql-abstractions = { path = "../my-no-sql-abstractions" }
#my-no-sql-server-core = { path = "../my-no-sql-server-core", optional = true }
my-json = { tag = "0.3.1", git = "https://github.com/MyJetTools/my-json.git" }
rust-extensions = { tag = "0.1.5", git = "https://github.com/MyJetTools/rust-extensions.git" }
tokio = { version = "*", features = ["full"] }
serde_json = { version = "*" }
serde = { version = "*", features = ["derive"] }
