[package]
name = "my-no-sql-data-writer"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = []
with-ssh = ["flurl/with-ssh"]

[dependencies]
my-no-sql-abstractions = { path = "../my-no-sql-abstractions" }
my-logger = { tag = "1.2.1", git = "https://github.com/MyJetTools/my-logger.git" }

rust-extensions = { tag = "0.1.5", git = "https://github.com/MyJetTools/rust-extensions.git", features = [
    "with-tokio",
] }
flurl = { tag = "0.6.1", git = "https://github.com/MyJetTools/fl-url" }

my-json = { tag = "0.3.2", git = "https://github.com/MyJetTools/my-json.git" }

tokio = { version = "*", features = ["full"] }
tokio-util = "*"
async-trait = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_derive = "*"
lazy_static = "*"

[dev-dependencies]
my-no-sql-core = { path = "../my-no-sql-core" }
